[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[node name="camadaCanvasHud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="labelPontuacao" type="Label" parent="."]
margin_left = 44.0
margin_top = 11.0
margin_right = 440.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
text = "-"
align = 1
valign = 1

[node name="LabelMensagem" type="Label" parent="."]
margin_left = 15.0
margin_top = 235.0
margin_right = 474.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 2 )
text = "BEM
VINDO"
align = 1
valign = 1

[node name="BtnStart" type="Button" parent="."]
margin_left = 131.0
margin_top = 599.0
margin_right = 371.0
margin_bottom = 686.0
custom_fonts/font = SubResource( 4 )
button_mask = 7
text = "COMEÃ‡AR"
icon_align = 1

[node name="TimerMensagem" type="Timer" parent="."]

[connection signal="pressed" from="BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="timeout" from="TimerMensagem" to="." method="_on_TimerMensagem_timeout"]
